Fix current profile is unnecessary added to "Open link as" context menu.

The CL which introduced the bug is https://crrev.com/378323

This CL also updated a few tests for check for regressions of the same
type.

BUG=591331
TEST=pass the browser tests in this CL

Review URL: https://codereview.chromium.org/1754393002

Cr-Commit-Position: refs/heads/master@{#378999}

Former-commit-id: 4c18bd250544470fff99ae1d9b631742d94a2983